--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -88,6 +88,7 @@
     line-height: 16px;
     color: #FFFFFF;
     margin-bottom: 1rem;
+    font-weight: 800;
 }
 
 .gpt3__footer-links_div p {
@@ -124,4 +125,23 @@
         font-size: 34px;
         line-height: 42px;
     }
+    
+
+    .gpt3__footer-links div {
+        margin: 1rem 0;
+    }
+
+    .gpt3__footer-btn p {
+        font-size: 14px;
+        line-height: 20px;
+    }
 }
+
+@media screen and (max-width: 550px) {
+    .gpt3__footer-heading h1 {
+        font-size: 27px;
+        line-height: 38px;
+    }
+
+}
+
