--- a/src/components/cta/cta.css
+++ b/src/components/cta/cta.css
@@ -17,7 +17,7 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 30px;
-    color: #0E0E0E;
+    color: #FFFFFF;
 }
 
 .gpt3__cta-content h3 {
@@ -25,7 +25,7 @@
     font-weight: 800;
     font-size: 24px;
     line-height: 45px;
-    color: #000000;
+    color: #FFFFFF;
 }
 
 .gpt3__cta-button {
